zeit.cms changes
================

1.43.1 (unreleased)
-------------------

- CAP-Kontext wieder entfernt (#7365).
- Bilddatei ist beim Anlegen jetzt obligatorisch, beim Editieren nicht (#7253).
- Obskurer Clipboard/Ghost-Fehler behoben (#6631).


1.43.0 (2010-06-02)
-------------------

- Retrieving None from XML now yields None, not the unicode string u'None'
  (#7360).

- Copyrights-field from CommonMetadata is now optional

- Copyrights moved to "navigation" in metadata form.

- ``product_id`` moved to "head" in metadata form.


1.42.0 (2010-05-17)
-------------------

- DAV-Properties from the "INTERNAL" namespace are no longer copied to XML
  (#7151).

- Last-Semantic-Change is now determined by the last save of the workingcopy.
  Before it was determined by the time of the checkin which lead to superfluous
  conflict errors (#7151).

- Generalised the way to control which dav properties are copied to XML
  (#7213).


1.41.4 (2010-04-14)
-------------------

- Provide useful error message in the ``redirect_to`` view when the object
  doesn't exist (#6998).

- When trying to view the thumbnail of an empty image group a 404 is returned
  instead of 500 (#6998).

1.41.3 (2010-04-14)
-------------------

- Prefer ``log.error(..., exc_info=True)`` over ``log.exception(...)``.


1.41.2 (2010-04-09)
-------------------

- Using ICMSContet adapter instead of direct repository access in most places
  to support multiple repositories (i.e. videos).


1.41.1 (2010-03-31)
-------------------

- PURGE für HTTP-Cache-Server (#6969).

- Using versions from the ZTK.

- Improved test infrastructure.

- "Trotzdem einchecken" honoriert nicht "als korrektur einchecken"  (#6880)


1.41.0 (2010-03-10)
-------------------

- Fix that text fields which are mapped to xml nodes still work even when there
  is no py:pytype and the contents is an integer (#6824).

- Change the way asset interfaces are registered. This fixes isolation problems
  during tests (#6712).
