@@ -269,6 +269,7 @@
   <include package="zeit.cms.clipboard.browser" />
   <include package="zeit.cms.content.browser" />
   <include package="zeit.cms.related.browser" />
+  <include package="zeit.cms.relation.browser" />
   <include package="zeit.cms.locking.browser" />
   <include package="zeit.cms.settings.browser" />
   <include package="zeit.cms.workflow.browser" />
