@@ -1,0 +1,3 @@
+# Copyright (c) 2008-2010 gocept gmbh & co. kg
+# See also LICENSE.txt
+# $Id: __init__.py 18576 2010-01-16 10:46:06Z zagy $
