@@ -1,0 +1,12 @@
+<h1>Referenced by</h1>
+
+<table class="contentListing">
+<tbody>
+<tr tal:repeat="ref view/references"
+    tal:attributes="class python:repeat['ref'].odd() and 'even' or 'odd'">
+<td><img tal:replace="structure ref/@@zmi_icon |nothing"/></td>
+<td><a tal:attributes="href ref/@@absolute_url" tal:content="ref/title"/></td>
+<td tal:content="ref/uniqueId"></td>
+</tr>
+</tbody>
+</table>
