@@ -1,0 +1,10 @@
+# Copyright (c) 2010 gocept gmbh & co. kg
+# See also LICENSE.txt
+
+import zeit.cms.testing
+
+
+def test_suite():
+    return zeit.cms.testing.FunctionalDocFileSuite(
+        'README.txt',
+        )
