@@ -4,5 +4,6 @@
   <subscriber handler=".corehandlers.update_referencing_objects_handler" />
 
   <adapter factory=".relation.references" />
+
 </configure>
 
