@@ -7,6 +7,8 @@ zeit.cms changes
 - CAP-Kontext wieder entfernt (#7365).
 - Bilddatei ist beim Anlegen jetzt obligatorisch, beim Editieren nicht (#7253).
 - Obskurer Clipboard/Ghost-Fehler behoben (#6631).
+- Neues Tab 'References', in dem die Objekte aufgelistet werden, von denen ein
+  Objekt referenziert wird (#6160).
 
 
 1.43.0 (2010-06-02)
